Fixed some dates

--- a/2019_20/AB/exam-notes/notes.tex
+++ b/2019_20/AB/exam-notes/notes.tex
@@ -26,7 +26,7 @@
 \newtheorem{definition}{Definition}[section]
 \newtheorem{theorem}{Theorem}[section]
 \title{Astrobiology Exam Notes}
-\date{\today}
+\date{20 December 2019}
 \author{Franz Miltz}
 \begin{document}
 \maketitle
