--- a/2019_20/CAP/notes/notes.tex
+++ b/2019_20/CAP/notes/notes.tex
@@ -4,7 +4,7 @@
 \begin{document}
 \title{Calculus and its Applications (SEM2)}
 \author{Franz Miltz}
-\date{May 28, 2020}
+\date{28 May 2020}
 \maketitle
 \tableofcontents
 \pagebreak
