--- a/2020_21/INF2D/notes/notes.tex
+++ b/2020_21/INF2D/notes/notes.tex
@@ -5,6 +5,7 @@
 
 \title{INF2D: Reasoning and Agents (SEM4)}
 \author{Franz Miltz}
+\date{20 April 2021}
 \begin{document}
 \maketitle
 \tableofcontents
